--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "connect": "^3.3.4",
     "serve-static": "^1.9.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt-ngmin": "0.0.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
